--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           java-version: '12.x'
       - uses: subosito/flutter-action@v2
         with:
+          flutter-version: '3.x'
           channel: 'stable'
       - run: flutter pub get
       - run: flutter build web
