--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v1
         with:
-          java-version: '18.x'
-      - uses: subosito/flutter-action@v1
+          java-version: '11.0'
+      - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.9'
+          channel: 'master'
       - run: flutter --version
       - run: flutter pub get
       - run: flutter build web
